--- a/src/index.html
+++ b/src/index.html
@@ -14,3 +14,8 @@
   <app-root></app-root>
 </body>
 </html>
+<!-- ,
+            "prerender": false,
+            "ssr": {
+              "entry": "server.ts"
+            } -->
