fixed log in issue with RBAC

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Forum&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
+ <script src="https://accounts.google.com/gsi/client" async defer></script>
+
 </head>
 <body>
   <app-root></app-root>
