--- a/src/index.html
+++ b/src/index.html
@@ -18,16 +18,13 @@
 </head>
 <body>
   <app-root></app-root>
-  <script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/68495493b344c01909257b15/1itf74o4u';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
+<script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+<df-messenger
+  intent="WELCOME"
+  chat-title="SunflowerTripPlanner"
+  agent-id="77808c6f-0bbb-4f6e-bfa8-5c76bca8c9a2"
+  language-code="en"
+></df-messenger>
+
 </body>
 </html>
